[package]
name = "cryptography"
version = "0.1.0"
authors = ["Tom Goring <mail@tomgoring.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cryptolib"
path = "src/lib.rs"

[[bin]]
name = "cryptobin"
path = "src/main.rs"

[dependencies]
iced = "0.1.1"