[package]
name = "cryptography"
version = "0.1.0"
authors = ["Tom Goring <mail@tomgoring.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "crypto"
path = "src/lib.rs"

[[bin]]
name = "crypto-gui"
path = "src/main.rs"

[dependencies]
iced = { git = "https://github.com/hecrj/iced.git" }