[package]
name = "cryptography"
version = "0.1.0"
authors = ["Tom Goring <mail@tomgoring.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "crypto"
path = "src/lib.rs"

[[bin]]
name = "crypto-gui"
path = "src/main.rs"

[dependencies]
iced = "0.1.1"
itertools = "0.9.0"
gcd = "2.0.1"
num = "0.3.1"