[package]
name = "cryptography"
version = "0.1.0"
authors = ["Tom Goring <mail@tomgoring.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "crypto"
path = "src/lib.rs"

[[bin]]
name = "crypto-gui"
path = "src/main.rs"

[dependencies]
itertools = "0.9.0"
gcd = "2.0.1"
num = "0.3.1"
sha1 = "0.6.0"
num_cpus = "1.13.0"
ocl = "0.19.3"
hex = "0.4.2"
actix-web = "3"
actix-cors = "0.5.3"
env_logger = "0.8.2"
serde = "1.0.118"
serde_json = "1.0.61"
futures = "0.3.8"
futures-core = "0.3.8"
futures-util = "0.3.8"
rand_seeder = "0.2.2"
rand_pcg = "0.3.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benches"
harness = false